--- a/grammy_winner.ipynb
+++ b/grammy_winner.ipynb
@@ -1398,27 +1398,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 71,
       "metadata": {
         "id": "D-5yV8K9bAdO",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 304
+          "height": 241
         },
-        "outputId": "f3e0c3e8-ff2e-43c3-fb3b-b1249494b5e4"
+        "outputId": "b4d5500d-18c4-4d2a-e51e-ce7c8c7774da"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "year                  0\n",
-              "annual_edition        0\n",
-              "category              0\n",
-              "artist            12179\n",
-              "song_or_album        21\n",
-              "winner                0\n",
-              "url                   0\n",
+              "year              0\n",
+              "annual_edition    0\n",
+              "category          0\n",
+              "winner            0\n",
+              "url               0\n",
               "dtype: int64"
             ],
             "text/html": [
@@ -1457,14 +1455,6 @@
               "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>artist</th>\n",
-              "      <td>12179</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>song_or_album</th>\n",
-              "      <td>21</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
               "      <th>winner</th>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
@@ -1478,7 +1468,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 71
         }
       ],
       "source": [
@@ -1487,33 +1477,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "source": [
+        "df_cleaned = df.drop_duplicates()"
+      ],
+      "metadata": {
+        "id": "Z5ZQZ8FVl1Xc"
+      },
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 83,
       "metadata": {
         "id": "PyHVu-EXbM-O",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c530c0b4-1c68-4e5c-ce75-0688a6486dd9"
+        "outputId": "ada07d2c-780c-4b1e-f101-e8c44c4acd46"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "np.int64(17)"
+              "np.int64(0)"
             ]
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 83
         }
       ],
       "source": [
-        "df.duplicated().sum()"
+        "df_cleaned.duplicated().sum()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "source": [
+        "df = df.drop(columns=['song_or_album'])"
+      ],
+      "metadata": {
+        "id": "FzUwAhh7mSsm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 85,
       "metadata": {
         "id": "IUXSuJIOehtP"
       },
@@ -1528,14 +1540,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 86,
       "metadata": {
         "id": "nisSCCe3f1SJ",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 750
         },
-        "outputId": "1ecc2934-98ff-42dc-a25c-e2db19fea585"
+        "outputId": "f58146a0-2072-4504-9e88-c762cbbfd32a"
       },
       "outputs": [
         {
@@ -1562,14 +1574,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 87,
       "metadata": {
         "id": "6baj4n1ngLb7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 573
         },
-        "outputId": "e0f9d530-7d24-49b9-80e2-b9adea537f78"
+        "outputId": "df1f96fd-728e-4d4b-925e-c55ce61a3be9"
       },
       "outputs": [
         {
@@ -1591,12 +1603,12 @@
         "plt.title(\"Top 10 Most Awarded Categories\")\n",
         "plt.xlabel(\"Number of Awards\")\n",
         "plt.ylabel(\"Category\")\n",
-        "plt.show()\n"
+        "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 88,
       "metadata": {
         "id": "jTebH7tphgah"
       },
@@ -1609,7 +1621,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMos4xFDF+HuA5MD/YPuLHZ",
+      "authorship_tag": "ABX9TyOIqab0J8YuLSy+u3ZuVO0L",
       "include_colab_link": true
     },
     "kernelspec": {
