--- a/Avacardo_Dataset.ipynb
+++ b/Avacardo_Dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzd1f5gyeWf5tIowWTqd0m",
+      "authorship_tag": "ABX9TyO+nhYqW1Uz/07mol3rGKO5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1767,8 +1767,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Example 1: Scatter plot between two continuous variables\n",
-        "# Replace 'firmness' and 'saturation' with actual continuous column names from your DataFrame\n",
+        "# 1: Scatter plot between two continuous variables\n",
         "plt.figure(figsize=(10, 6))\n",
         "sns.scatterplot(x='firmness', y='saturation', data=df)\n",
         "plt.title('Scatter Plot of Firmness vs. Saturation')\n",
@@ -1801,8 +1800,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Example 2: Box plot between a categorical variable and a continuous variable\n",
-        "# Replace 'color_category' and 'ripeness' with actual column names\n",
+        "# 2: Box plot between a categorical variable and a continuous variable\n",
         "plt.figure(figsize=(12, 7))\n",
         "sns.boxplot(x='color_category', y='ripeness', data=df)\n",
         "plt.title('Ripeness by Color Category')\n",
@@ -1836,8 +1834,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Example 3: Pair plot for a subset of numerical variables\n",
-        "# Replace these column names with actual numerical column names you want to include\n",
+        "# 3: Pair plot for a subset of numerical variables\n",
         "numerical_cols = ['firmness', 'hue', 'saturation', 'ripeness'] # Example numerical columns\n",
         "sns.pairplot(df[numerical_cols])\n",
         "plt.suptitle('Pair Plot of Numerical Variables', y=1.02) # Add title above the plot\n",
