--- a/Sales_Dataset.ipynb
+++ b/Sales_Dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMHbnQGlYnzrOnI2tOkbw8b",
+      "authorship_tag": "ABX9TyMSZfrde4FiauBsU47OWETH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1633,7 +1633,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create a figure with two subplots\n",
+        "# Creating a figure with two subplots\n",
         "fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
         "\n",
         "# Boxplot for original data\n",
@@ -1705,11 +1705,11 @@
         "    plt.title(f'Distribution of {col}')\n",
         "    plt.xlabel(col)\n",
         "    plt.ylabel('Count')\n",
-        "    plt.xticks(rotation=45, ha='right') # Rotate labels for better readability\n",
-        "    plt.tight_layout() # Adjust layout to prevent labels overlapping\n",
+        "    plt.xticks(rotation=45, ha='right')\n",
+        "    plt.tight_layout()\n",
         "    plt.show()\n",
         "\n",
-        "# You can also use value_counts for a quick look at categorical data distribution\n",
+        "\n",
         "for col in categorical_cols:\n",
         "    print(f\"Value counts for {col}:\\n{df[col].value_counts()}\\n\")"
       ],
@@ -1865,8 +1865,8 @@
         "\n",
         "# Numerical vs. Categorical (Box Plot)\n",
         "\n",
-        "numerical_col_for_box = 'Gender' # Replace with an actual numerical column name\n",
-        "categorical_col_for_box = 'Age' # Replace with an actual categorical column name\n",
+        "numerical_col_for_box = 'Gender'\n",
+        "categorical_col_for_box = 'Age'\n",
         "\n",
         "plt.figure(figsize=(12, 6))\n",
         "sns.boxplot(data=df, x=categorical_col_for_box, y=numerical_col_for_box)\n",
@@ -1879,8 +1879,8 @@
         "\n",
         "# Categorical vs. Categorical (Count Plot with Hue)\n",
         "\n",
-        "categorical_col_1 = 'Product Category' # Replace with an actual categorical column name\n",
-        "categorical_col_2 = 'Gender' # Replace with another actual categorical column name\n",
+        "categorical_col_1 = 'Product Category'\n",
+        "categorical_col_2 = 'Gender'\n",
         "\n",
         "plt.figure(figsize=(12, 6))\n",
         "sns.countplot(data=df, x=categorical_col_1, hue=categorical_col_2)\n",
@@ -1992,13 +1992,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# Thank you"
+      ],
       "metadata": {
-        "id": "8VW0srdtOPIZ"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "T6I_rPtsPxGi"
+      }
     }
   ]
 }
