--- a/Avacardo_Dataset.ipynb
+++ b/Avacardo_Dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+nhYqW1Uz/07mol3rGKO5",
+      "authorship_tag": "ABX9TyP0I6YlNzZ4xKnlGRp0BDcI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "cll7J7XftHUq"
       },
@@ -56,7 +56,7 @@
         "id": "eahcJ7MttctI",
         "outputId": "2d218655-de20-460a-b518-9052e20cfe3d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +490,7 @@
         "id": "DYAVZYUCtgg2",
         "outputId": "8cb77b19-eb2c-49ae-bc65-831785055258"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -922,7 +922,7 @@
         "id": "louimdSMtjO-",
         "outputId": "e8d94d53-81a1-4a45-864b-926adc08737d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -948,7 +948,7 @@
         "id": "8gi-JYiItkGm",
         "outputId": "ec630bca-140a-4cec-eb60-81d1f27c6f50"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -977,7 +977,7 @@
         "id": "eHflyGhCtk8e",
         "outputId": "041e8245-40f0-4c9d-f1bd-0f5387b30c21"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1075,7 +1075,7 @@
         "id": "aWoEOE7jtl8g",
         "outputId": "00e6e7c6-4d94-4195-a24d-4c27902ce168"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1114,7 +1114,7 @@
         "id": "Me9cDH-ntm84",
         "outputId": "97b36df3-df77-4ca5-af50-c1bcbd9468e6"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1547,7 +1547,7 @@
         "id": "IF--vgu9tn2Y",
         "outputId": "f751dd88-169d-4a0a-fc00-b467d0c83808"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1645,7 +1645,7 @@
         "id": "PYzaazh7tucA",
         "outputId": "397c5138-ee15-44dc-a07c-8a82581dfef7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1672,7 +1672,7 @@
       "cell_type": "code",
       "source": [
         "plt.figure(figsize = (10, 6))\n",
-        "sns.histplot(df['saturation']) # Replace 'size' with the actual column name\n",
+        "sns.histplot(df['saturation'])\n",
         "plt.show()"
       ],
       "metadata": {
@@ -1683,7 +1683,7 @@
         "id": "B7rl8_qUSDQE",
         "outputId": "8e4f8b80-9622-474c-996b-8ce834a1c0d2"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1712,7 +1712,7 @@
         "id": "Q14vWkq0t3o2",
         "outputId": "990e4242-c88f-4d8f-d55e-7f63564f6a64"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1741,7 +1741,7 @@
         "id": "NoNlOetYt-Uu",
         "outputId": "5badcb03-7bb6-4acf-dd93-a1fd5631374b"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1783,7 +1783,7 @@
         "id": "ipDNwe-JSogf",
         "outputId": "c914e71c-27d9-4b3b-a92f-a8bb9b903f7f"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1806,7 +1806,7 @@
         "plt.title('Ripeness by Color Category')\n",
         "plt.xlabel('Color Category')\n",
         "plt.ylabel('Ripeness')\n",
-        "plt.xticks(rotation=45) # Rotate x-axis labels if they overlap\n",
+        "plt.xticks(rotation=45)\n",
         "plt.show()"
       ],
       "metadata": {
@@ -1817,7 +1817,7 @@
         "id": "bBPLZoxdSod_",
         "outputId": "9b0c5be9-7848-421d-cdc7-c8597665f104"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1835,9 +1835,9 @@
       "cell_type": "code",
       "source": [
         "# 3: Pair plot for a subset of numerical variables\n",
-        "numerical_cols = ['firmness', 'hue', 'saturation', 'ripeness'] # Example numerical columns\n",
+        "numerical_cols = ['firmness', 'hue', 'saturation', 'ripeness']\n",
         "sns.pairplot(df[numerical_cols])\n",
-        "plt.suptitle('Pair Plot of Numerical Variables', y=1.02) # Add title above the plot\n",
+        "plt.suptitle('Pair Plot of Numerical Variables', y=1.02)\n",
         "plt.show()"
       ],
       "metadata": {
@@ -1848,7 +1848,7 @@
         "id": "g_MczSw4Sr8f",
         "outputId": "ea35dde3-d2ce-4e2e-bdb6-eac0dc7b7e62"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1878,7 +1878,7 @@
         "id": "Bpqy-dm7uZ1Q",
         "outputId": "f1220ec2-b683-4a0e-9d16-c5f543084e5a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
