--- a/Amazon_Reviews.ipynb
+++ b/Amazon_Reviews.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNznDeN80UG+l2wlG2r6Nzw",
+      "authorship_tag": "ABX9TyMh6v7bPy2Z2gRbAjk7ghUw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "TTPAKO4Bhbx3"
       },
@@ -56,7 +56,7 @@
         "id": "1V4n0rC7hzaq",
         "outputId": "2b37acfd-7242-4e16-ea72-aeab240d7c9b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -527,7 +527,7 @@
         "id": "EwLfs-Afh3BB",
         "outputId": "c422fa13-3b6e-4a6e-8d4a-b0717155e5c4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1010,7 +1010,7 @@
         "id": "4ERw5mW1h5OS",
         "outputId": "756e55b2-9f8e-415b-bf16-816b11893660"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1036,7 +1036,7 @@
         "id": "RAgw9_cxiA0x",
         "outputId": "49efa787-7ed1-4e7b-d346-a7db688b0fac"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1065,7 +1065,7 @@
         "id": "bKQHWzABiCJ5",
         "outputId": "6755bf71-7212-4987-a053-f5c0993efc55"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1168,7 +1168,7 @@
         "id": "OySaSIJFiDai",
         "outputId": "dadc5a3b-89a8-4509-d4e5-761a72e914e9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1208,7 +1208,7 @@
         "id": "tQ2ez9HriEo5",
         "outputId": "38253bbf-76bb-43a0-e72b-27f324b9031b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1679,7 +1679,7 @@
         "id": "qTSDQKwtiGq6",
         "outputId": "f0023d5a-ffcf-495d-a99e-dc2e52826eff"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1782,7 +1782,7 @@
         "id": "671p_dxniOCy",
         "outputId": "10326cf5-d3d5-4938-e907-05ad9e5dfa55"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1808,8 +1808,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# --- Handle outliers using Z-Score ---\n",
-        "# Replace 'Score' with the name of a numerical column in your DataFrame\n",
         "import scipy.stats as stats\n",
         "\n",
         "\n",
@@ -1817,13 +1815,6 @@
         "outlier_indices_zscore = np.where(z_scores > 3)\n",
         "print(\"Indices of outliers (Z-Score > 3):\", outlier_indices_zscore)\n",
         "\n",
-        "# Example: Remove outliers based on Z-score\n",
-        "# df_cleaned_zscore = df.drop(outlier_indices_zscore[0])\n",
-        "# print(\"\\nDataFrame shape after removing Z-score outliers:\", df_cleaned_zscore.shape)\n",
-        "\n",
-        "\n",
-        "# --- Handle outliers using IQR (Interquartile Range) ---\n",
-        "# Replace 'Score' with the name of a numerical column in your DataFrame\n",
         "Q1 = df['Score'].quantile(0.25)\n",
         "Q3 = df['Score'].quantile(0.75)\n",
         "IQR = Q3 - Q1\n",
@@ -1841,7 +1832,7 @@
         "id": "B9vrPXoMiQ8J",
         "outputId": "892eaed8-2eb2-4325-849c-adc6178453cd"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1919,8 +1910,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Univariate Analysis\n",
-        "\n",
         "# Display the distribution of the 'Score' column\n",
         "plt.figure(figsize=(8, 6))\n",
         "sns.histplot(df['Score'], kde=True, bins=5)\n",
@@ -1943,7 +1932,7 @@
         "id": "Yz5ccVj1ihfi",
         "outputId": "df7189bd-7fc6-4197-a6fd-3ee3c611c57d"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1995,10 +1984,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Bivariate Analysis\n",
-        "\n",
-        "# Calculate Helpfulness Ratio\n",
-        "# Avoid division by zero by adding a small epsilon or handling the case where Denominator is 0\n",
         "df['HelpfulnessRatio'] = df['HelpfulnessNumerator'] / (df['HelpfulnessDenominator'] + 1e-9)\n",
         "\n",
         "# Relationship between Score and Helpfulness Ratio\n",
@@ -2017,7 +2002,7 @@
         "plt.title('Total Helpfulness Votes vs. Score')\n",
         "plt.xlabel('Score')\n",
         "plt.ylabel('Total Helpfulness Votes')\n",
-        "plt.yscale('log') # Use a log scale due to potential skewness\n",
+        "plt.yscale('log')\n",
         "plt.show()"
       ],
       "metadata": {
@@ -2028,7 +2013,7 @@
         "id": "QciJX9DajRj8",
         "outputId": "c7f16631-b598-419d-f852-7c154bbab9a3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2064,13 +2049,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Replace 'ProductId' with another suitable numerical or categorical column\n",
         "plt.figure(figsize=(10, 6))\n",
-        "sns.histplot(df['ProductId'].astype(str), bins=50) # Convert to string if many unique\n",
+        "sns.histplot(df['ProductId'].astype(str), bins=50)\n",
         "plt.title('Distribution of Product IDs')\n",
         "plt.xlabel('Product ID')\n",
         "plt.ylabel('Frequency')\n",
-        "plt.xticks(rotation=90) # Rotate labels if too many\n",
+        "plt.xticks(rotation=90)\n",
         "plt.show()"
       ],
       "metadata": {
@@ -2081,7 +2065,7 @@
         "id": "GkY5DIVPjf1t",
         "outputId": "ff92859a-6c15-40aa-ce6d-45745eb1593f"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2113,7 +2097,7 @@
         "id": "CNGkRDq2kb2-",
         "outputId": "4df32d68-fead-4a7d-9f80-fe814ba5e7f6"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2147,7 +2131,7 @@
         "id": "qoR5eiJXkeXP",
         "outputId": "78aef5ab-0fcc-49e4-c98b-b2cc56112462"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2181,7 +2165,7 @@
         "id": "nFzjSX2TlLr_",
         "outputId": "1f3f9e2b-2073-4744-d062-a4f4f4a9922e"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2215,7 +2199,7 @@
         "id": "GuZyoErDlLl2",
         "outputId": "aa9edba4-08a4-46dc-8f59-36148076b281"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2250,7 +2234,7 @@
         "id": "1TvTYrcplWYX",
         "outputId": "1b42c80d-590e-4803-fbf3-b7fe4c91a524"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
